some changes on links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="col-lg-2"></div>
         <div class="col-lg-8 introduction">
           <div class="row title"><h1>getSVG</h1>.ir</div>
-          <div class="row littleIntro">create your SVG shape</div>
+          <div class="row littleIntro">create your SVG shapes</div>
           <div class="row intro">
             Create your SVG image and background easily with this tool . We hope
             you find it useful and used in your projects
@@ -147,19 +147,19 @@
           <div class="center-align stay">
             <div class="anotherWebsite">
               <h3>Was this tool col?</h3>
-              <strong><a href="#"  onclick="alert('Will be activated soon')">See our other online tools</a></strong>
+              <strong><a href="https://github.com/mhmd-mir" >github</a></strong>
             </div>
             <div class="introLogo">
               <img src="images/logo/introLogo.jpg" alt="getSVG" />
             </div>
             <div class="concatUs">
               <p>Do you have any project in your mind?! lets chat!</p>
-              <a href="mailto:ragnarWilson2004@gmail.com">ragnarWilson2004@gmail.com</a>
+              <a href="mailto:mhmdMirshabi@gmail.com">mhmdMirshabi@gmail.com</a>
             </div>
             <div class="generalInfo">
               <div class="CV">
-                <strong><a href="#" onclick="alert('Will be activated soon')">www.mainCV.ir</a></strong>
-                <p>ragnarWilson2004@gmail.com | Created by Slade</p>
+                <strong><a href="https://mhmd-mirshabi.ir" >mhmd-mirshabi.ir</a></strong>
+                <p>mhmdMirshabi@gmail.com | Created by Mhmd</p>
               </div>
             </div>
           </div>
