some changes to links (v2)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="row littleIntro">create your SVG shapes</div>
           <div class="row intro">
             Create your SVG image and background easily with this tool . We hope
-            you find it useful and used in your projects
+            you find it helpful and be useful in your projects
           </div>
           <div class="row getStarted">
             <a href="#sectionChanging" class="btnGetStarted">getStarted</a>
